--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Laravel</title>
+        <title>VideoJS VAST IMA Example in VueJS</title>
     </head>
     <body>
         <div id="app">
-            <example-component></example-component>
+            <video-component></video-component>
         </div>
         <script src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-        <script src="/js/app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
